src/app/app.component.scss
@import '../colors.scss';

router-outlet {
  display: none;
}

app-nav-menu {
  position: fixed;
  background: $color-white;
  box-shadow: gray 0 0 10px;
  top: 0;
  width: 100%;
}

main {
  min-height: calc(100vh - 90px);
  margin-top: 90px;
  padding: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: $color-dark;
}

@media screen and (max-width: 768px) {
  main {
    min-height: auto;
    padding: 0;
  }
}

